Fixed layout stuff, fixed text wrapping

--- a/app/globals.css
+++ b/app/globals.css
@@ -283,7 +283,7 @@ data-card::part(action-btn-icon){
   border-width: 1px;
   background: var(--accent);
   border-radius: 0.375rem;
-  padding: 15px 32px;
+  padding: 15px 16px;
   text-decoration: underline!important;
 }
 
